--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:cypress": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,6 +53,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
+    "cypress": "^9.4.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
