--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:cypress": "cypress open",
+    "test:cypress": "start-server-and-test start http://localhost:3000 cypress",
+    "cypress": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -59,7 +60,8 @@
     "enzyme-to-json": "^3.6.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "start-server-and-test": "^1.14.0"
   },
   "jest": {
     "verbose": true,
