--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wd-react",
+  "homepage": "https://SashaOK47.github.io/Breaking-Bad/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,11 +24,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && npm run build-gh-pages",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:cypress": "start-server-and-test start http://localhost:3000 cypress",
     "cypress": "cypress open",
+    "build-gh-pages": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,6 +61,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "sass": "^1.49.0",
